# prms

./: .gitignore  README.md  chatgpt.txt  docker-compose.yml
.kiro/specs/prms-backend-foundation/: .config.kiro  requirements.md
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20250101_0000_001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: health.py
backend/app/api/v1/: auth.py  projects.py  roles.py  users.py
backend/app/core/: config.py  logging.py  security.py
backend/app/crud/: project.py  role.py  user.py
backend/app/database/: base.py  session.py
backend/app/dependencies/: auth.py  database.py
backend/app/middleware/: exception_handler.py
backend/app/models/: __init__.py  alert.py  asset.py  asset_field_value.py  audit_log.py  base.py  document.py  import_history.py  project.py  project_summary.py  report_template.py  resource_field.py  resource_type.py  role.py  sheet_mapping.py  template.py  template_resource_type.py  user.py
backend/app/schemas/: common.py  project.py  role.py  token.py  user.py
backend/app/services/: auth.py  project.py
backend/tests/: conftest.py
